# G_Alex-IiTP-Labs

./: .gitignore  CMakeLists.txt  ReadMe.md
Sem1/: ReadMe.md
Sem1/L1/: 5_stepik.cpp  7_stepik.cpp  8.cpp  CMakeLists.txt
Sem1/L2/: 11.cpp  13_stepik.cpp  14_stepik.cpp  5_stepik.cpp  7.cpp  8_again.cpp  блок-схемы.rar
Sem1/L2/blok-maps/: 4.1.vsdx  4.2.vsdx
Sem1/L3/: 1.vsdx  5.cpp  9.cpp  CMakeLists.txt
Sem1/L4/: 11.cpp  12_stepik.cpp  3.cpp  5_stepik.cpp  6_stepik.cpp  7_stepik.cpp  8_stepik.cpp  CMakeLists.txt
Sem1/L5/: CMakeLists.txt
Sem1/L5/Task2/: 2.cpp
Sem1/L5/Task3/g_test/: Test3.cpp
Sem1/L5/Task4/: Test4Cmake.cmake
Sem1/L5/Task4/g_test/: Test4.cpp
Sem1/L5/Task6/: 6_stepik.cpp
Sem1/L5/Task8/: 8_stepik.cpp
Sem1/L5/checkInput/: checkInput.h
Sem1/L5_LIBS/: CMakeLists.txt
Sem1/L6/: Start.cpp
Sem1/L6/solves/: 1.cpp  2.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  forStart.h
Sem1/L6/test/: Test7.cpp  Test8.cpp
Sem1/L7/: CMakeLists.txt
Sem1/L7/Task3/: Task3.cpp
Sem1/L7/Task4/: Task4.cpp
Sem1/L7/Task5/: Task5.cpp
Sem1/L7/Task6/: Task6.cpp
Sem1/L7/Task7/: Task7.cpp
Sem1/L7/Tests/: Task4.cpp  Task8.cpp  Test4.cpp  Test5.cpp
Sem1/L8/Task1/: functions.h
Sem1/L8/Task1/functions/: inputData.cpp  searchAndDelete.cpp  selectTODO.cpp
Sem1/L8/Task2/: CMakeLists.txt  Task2.cpp  functions.h
Sem1/L8/Task2/files/: DB.in  DB.out
Sem1/L8/Task2/functions/: deleteData.cpp  importDataFromFile.cpp
Sem1/L8/Task3/: CMakeLists.txt
Sem1/L8/Task3/checkInput/: checkInput.cpp  checkInput.h
Sem1/L8/Task3/functions/: deleteData.cpp  resizeArray.cpp
Sem1/OAiP/L1/: 1.cpp  2_stepik.cpp  3_stepik.cpp  4_stepik.cpp  6.cpp  9.cpp
Sem1/OAiP/L1/blok-maps/: 1.vsdx  6.vsdx  8.vsdx  9.vsdx
Sem1/OAiP/L2/: 10.cpp  12_stepik.cpp  1_stepik.cpp  2_stepik.cpp  3_stepik.cpp  4_1.cpp  4_2.cpp  6_stepik.cpp  9.cpp  CMakeLists.txt
Sem1/OAiP/L2/blok-maps/: 10.vsdx  11.vsdx
Sem1/OAiP/L2/блок-схемы/: 7.vsdx  8.vsdx  9.vsdx
Sem1/OAiP/L3/: 1.cpp  2.cpp  3.cpp  4.1.cpp  4.2.cpp  6.cpp  7.cpp  8_stepik.cpp
Sem1/OAiP/L4/: 1.cpp  10_stepik.cpp  13.cpp  2.cpp  4_stepik.cpp  9.cpp
Sem1/OAiP/L5/Task1/: 1.cpp  Task1CMake.cmake
Sem1/OAiP/L5/Task3/: 3.cpp  Test3Cmake.cmake
Sem1/OAiP/L5/Task4/: 4.cpp
Sem1/OAiP/L5/Task5/: 5.cpp  Test5Cmake.cmake
Sem1/OAiP/L5/Task7/: 7_stepik.cpp
Sem1/OAiP/L5_LIBS/: Task1.cpp  Task2.cpp
Sem1/OAiP/L6/: CMakeLists.txt
Sem1/OAiP/L6/checkInput/: checkInput.cpp
Sem1/OAiP/L6/solves/: 3.cpp
Sem1/OAiP/L6/test/: 5.cpp  6.cpp  7.cpp  8.cpp  Test5.cpp  Test6.cpp
Sem1/OAiP/L7/Task1/: Task1.cpp
Sem1/OAiP/L7/Task2/: Task2.cpp
Sem1/OAiP/L7/Task8/: Task8.cpp
Sem1/OAiP/L7/Task9/: Task9.cpp
Sem1/OAiP/L7/Tests/: Task5.cpp  Task7.cpp  Test7.cpp  Test8.cpp
Sem1/OAiP/L8/: CMakeLists.txt
Sem1/OAiP/L8/Task1/: CMakeLists.txt  Task1.cpp
Sem1/OAiP/L8/Task1/checkInput/: checkInput.cpp
Sem1/OAiP/L8/Task1/functions/: outputData.cpp  resizeArray.cpp  searchAndEdit.cpp  searchAndOutput.cpp  sortData.cpp
Sem1/OAiP/L8/Task3/: Task3.cpp  functions.h
Sem2/: ReadMe.md
Sem2/L0/T1/carWindow/: carWindow.h
Sem2/L0/T1/figureWindow/: figureWindow.h
Sem2/L0/T1/moveRect/: moveRect.cpp
Sem2/L1/T2/: CMakeLists.txt  file.txt
Sem2/L1/T2/mainWindow/: mainWindow.cpp  mainWindow.h
Sem2/L1/T2/projects/: projectClass.cpp  projectClass.h
Sem2/L1/T4/: CMakeLists.txt
Sem2/L2/L2T1_P0/: test.txt
Sem2/L2/L2T1_P1/: main.cpp
Sem2/L2/L2T2/: CMakeLists.txt
Sem2/L2/L2T2/stack/: bracketItem.h  stack.cpp  stack.h
Sem2/L2/L2T2/ui/: MainWindow.h
Sem2/L2/L2T3/: main.cpp
Sem2/L3/T1/: main.cpp
Sem2/L3/T2/: CMakeLists.txt
Sem2/L4/T1/: CMakeLists.txt  MyString.h  main.cpp  unique_char.h
Sem2/L4/T2/: CMakeLists.txt  main.cpp
Sem2/L4/T2/ui/: MainWindow.h
Sem2/L4/T3/: CMakeLists.txt
Sem2/L4/T3/files/: MyString.h
Sem2/L4/T3/ui/: MainWindow.cpp
Sem2/L5/T2/: CMakeLists.txt  main.cpp  shared_ptr.h
Sem2/L5/T2/ui/: MainWindow.h
Sem2/L6/T2/: CMakeLists.txt  HashTable.h  main.cpp
Sem2/L6/T3/: CMakeLists.txt  main.cpp
Sem2/OAiP/L0/T1/: CMakeLists.txt  main.cpp
Sem2/OAiP/L0/T1/carWindow/: carWindow.cpp
Sem2/OAiP/L0/T1/figureWindow/: figureWindow.cpp
Sem2/OAiP/L0/T1/mainWindow/: mainWindow.cpp  mainWindow.h
Sem2/OAiP/L0/T1/moveRect/: moveRect.h
Sem2/OAiP/L0/T2/: CMakeLists.txt  main.cpp
Sem2/OAiP/L0/T2/figures/: figureCircle.h  figureHexagon.cpp  figurePolyline.h  figureRhombus.cpp  figureRhombus.h  figureSquare.cpp  figureSquare.h  figures.cpp  figures.h
Sem2/OAiP/L0/T2/figures/figureStar/: star.h  star_6.cpp  star_7.cpp  star_8.cpp  star_8.h
Sem2/OAiP/L1/T1/: CMakeLists.txt  file.txt  file1.txt  main.cpp
Sem2/OAiP/L1/T1/mainWindow/: mainWindow.h
Sem2/OAiP/L1/T1/workWithDate/: workWithDate.cpp
Sem2/OAiP/L2/L2T1_P0/: CMakeLists.txt
Sem2/OAiP/L2/L2T1_P0/list_of_books/: BookItem.h  sortBy.cpp
Sem2/OAiP/L2/L2T1_P0/ui/: mainWindow.h  searchByNameAndYear.cpp
Sem2/OAiP/L2/L2T3/: CMakeLists.txt
Sem2/OAiP/L2/L2T3/rpe/: rpe.cpp
Sem2/OAiP/L2/L2T3/stack/: stack.h
Sem2/OAiP/L3/T4/: CMakeLists.txt  main.cpp
Sem2/OAiP/L3/T4/ui/: mainWindow.cpp  mainWindow.h
Sem2/Programming/Lab1/: Lab1.sln
Sem2/Programming/Lab2/: Lab2.sln
Sem2/Programming/Lab3/: Lab3.sln
Sem2/Programming/Lab4/: Lab4.sln
Sem2/Programming/Lab5/: Lab5.sln
Sem2/Programming/Lab6/: Lab6.sln
Sem2/Programming/Lab7/: Lab7.sln
Sem3/: ReadMe.md
Sem3/ИСП/: ReadMe.md
Sem3/ИСП/LW1/: LW1.sln
Sem3/ИСП/LW2/: LW2.sln
Sem3/ИСП/LW3/: LW3.sln
Sem3/ИСП/LW4/: LW4.sln
Sem3/ИСП/LW5/: LW5.sln
Sem3/ИСП/LW5_T/: LW5.sln
Sem3/ИСП/LW6/: LW6.sln
Sem3/ИСП/LW7/: LW8.sln
Sem3/ИСП/LW8/: LW8.sln
Sem3/КПрог/: ReadMe.md
Sem3/КПрог/Labs-Intel/: Lab 4.asm  Lab 5.asm  Lab 6.asm  Lab 7.asm  Лаба8.docx
Sem3/КПрог/Labs-Moto/: Lab 1.1.asm  Lab 1.2.asm  Lab 2.asm  Lab 3.asm
Sem3/ПЗМА/: ReadMe.md
Sem3/ПЗМА/1/: 1.mw
Sem3/ПЗМА/2/: 2 - 1.mw  2 - 2.mw  2.mw  3 таска.mw  3.mw  4.mw
Sem3/ПЗМА/3/: 1.mw  2.mw  3.mw
Sem4/: ReadMe.md
Sem4/ISP/: ReadMe.md
Sem4/ISP/Lab5/: Gorgun_253501.Application.csproj  Lab5.sln
Sem4/ISP/Lab_1_4/: Lab_1_4.sln
(+294 files in other folders)
