cmake_minimum_required(VERSION 3.23)
project(Lab4)

set(CMAKE_CXX_STANDARD 23)

add_executable(1 1.cpp)
add_executable(2 2.cpp)
add_executable(3 3.cpp)
add_executable(4 4_stepik.cpp)
add_executable(5 5_stepik.cpp)
add_executable(6 6_stepik.cpp)
add_executable(7 7_stepik.cpp)
add_executable(8 8_stepik.cpp)
add_executable(9 9.cpp)
add_executable(10 10_stepik.cpp)
add_executable(11 11.cpp)
add_executable(12 12_stepik.cpp)
add_executable(13 13.cpp)