add_executable(Task3
        Task3/Task3.cpp
        Task3/functions/DB.h
        Task3/functions/addData.cpp
        Task3/functions/deleteData.cpp
#        Task3/functions/editData.cpp
        Task3/functions/exportDataToFile.cpp
        Task3/functions/importDataFromFile.cpp
        Task3/functions/selectTODO.cpp
        Task3/functions/sortData.cpp
        Task3/functions/viewData.cpp
        Task3/functions/resizeArray.cpp
        Task3/checkInput/checkInput.cpp
        Task3/checkInput/checkInput.h
        Task3/functions.h
        )