cmake_minimum_required(VERSION 3.23)
project(Lab2)

set(CMAKE_CXX_STANDARD 14)

add_executable(1 1_stepik.cpp)
add_executable(2 2_stepik.cpp)
add_executable(3 3_stepik.cpp)
add_executable(4_1 4_1.cpp)
add_executable(4_2 4_2.cpp)
add_executable(5 5_stepik.cpp)
add_executable(6 6_stepik.cpp)
add_executable(7 7.cpp)
add_executable(8 8_again.cpp)
add_executable(9 9.cpp)
add_executable(10 10.cpp)
add_executable(11 11.cpp)
add_executable(12 12_stepik.cpp)
add_executable(13 13_stepik.cpp)
add_executable(14 14_stepik.cpp)