add_executable(Task1
        Task1/Task1.cpp
        Task1/functions.h
        Task1/functions/inputData.cpp
        Task1/functions/outputData.cpp
        Task1/functions/searchAndDelete.cpp
        Task1/functions/searchAndEdit.cpp
        Task1/functions/searchAndOutput.cpp
        Task1/functions/selectTODO.cpp
        Task1/functions/sortData.cpp
        Task1/functions/resizeArray.cpp
        Task1/checkInput/checkInput.h
        Task1/checkInput/checkInput.cpp
        )